update my Sila QA

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -769,27 +769,6 @@ window.onload = function () {
 
 		19:05 釋道中 當然可以
 
-	17:48 釋道中 請教副院長：
-1.《狂癡羯磨》的被羯磨人，是否不犯偷盜？如果他還能分辨自己的跟別人的物品，……能夠分辨自己的跟常住的物品。這樣是否犯偷盜？
-	19:55 Sbin108 1能分辨時，有犯偷罪
-
-2.作《狂癡羯磨》的時候，被羯磨人，是否需要到現場？
-	2不需，因他也不會來
-
-3.《狂癡羯磨》是否能用「白眾」形式？單單「白眾」，沒有正式集僧作羯磨，是否有效力？
-	3，應羯磨法
-
-17:53 釋道中 最近不少人，都說昭慧，是破僧！但是末學覺得：她是女人，不能破法輪僧，
-	在她的寺院內部，也沒有分成二部作羯磨，也不算破羯磨僧
-	如果要以廣義的說她「破僧」，在沒有白四羯磨作喝諫之前，是否只能夠算她突吉羅罪？
-		20:07 Sbin108 他是邪見，用性平的俗法破二部僧受大戒，分成改革派、傳統派，分黨派破和合僧，不是約羯磨法判罪，勸導不接受，入犯科是吉羅違教，但破正見可以被舉罪，而三舉四羯磨法他也不能接受與作法，故用世間行政法，除僧籍廢戒牒效力，等於擯出僧團了，磨擯，不懺悔過自新等於滅擯，如說淫欲不障道的惡見沙彌，擯出去
-
-18:47 釋道中 《汙家擯謗違諫戒》，如果，那二位比丘，祇有污家行惡行，沒有罵僧團有「愛恚怖痴」，是否單單「污家+行惡行」，祇有突吉羅罪？
-	末學查詢《十誦》，是祇有突吉羅
-	……但是很多比丘都以為「污家」是僧殘的方便罪？
-
-		20:09 Sbin108 是污家有吉、提等小罪，謗僧不受勸才是犯殘罪
-
 移夏，怎麼做？
 	18:55 釋道昧 請問法雲師週五早上離開淨苑，搭中午飛機回香港
 
@@ -961,7 +940,7 @@ window.onload = function () {
 昭慧破僧
 	17:53 釋道中 最近不少人，都說昭慧，是破僧！但是末學覺得：她是女人，不能破法輪僧，
 	在她的寺院內部，也沒有分成二部作羯磨，也不算破羯磨僧
-	如果要以廣義的說她「破僧」，在沒有白四羯磨作喝諫之前，是否只能夠算她突吉羅罪？
+	如果要以廣義的說她「破僧」，在沒有白四羯磨作呵諫之前，是否只能夠算她突吉羅罪？
 		20:07 Sbin108 他是邪見，用性平的俗法破二部僧受大戒，分成改革派、傳統派，分黨派破和合僧，不是約羯磨法判罪，
 		勸導不接受，入犯科是吉羅違教，
 		但破正見可以被舉罪，而三舉四羯磨法他也不能接受與作法，
@@ -972,6 +951,7 @@ window.onload = function () {
 	是否單單「污家+行惡行」，祇有突吉羅罪？
 	末學查詢《十誦》，是祇有突吉羅
 	……但是很多比丘都以為「污家」是僧殘的方便罪？
+	
 		20:09 Sbin108 是污家有吉、提等小罪，謗僧不受勸才是犯殘罪
 
 居士犯到五戒可以重受五戒嗎？
@@ -7749,7 +7729,7 @@ window.onload = function () {
 
 	既然相信北傳，為什麼不相信北傳的四分律呢？不知不怪，既已知 還堅持，除了「明知故犯，別有企圖」，還能作何解 ？
 	22:40	釋道中	這種事情，很難開口勸諫！
-	人情上：不相幹的人，如何開口？
+	人情上：不相干的人，如何開口？
 	事理上：不了解當時的狀況，如何判定？審定？
 	心理上：他的當時的心境、修行的心路歷程、是否有壓力、魔障、…
 	犯錯的人，可能因羞恥，轉而作更壞的事。
@@ -8493,7 +8473,7 @@ window.onload = function () {
 
 	大家清楚、認同、同意了，就可以了，包括你把男眾托缽堂，還有辦公室都劃進來，沒關係，
 
-	反正他們南傳比丘跟你們是不相幹的，
+	反正他們南傳比丘跟你們是不相干的，
 
 	那麼因為如果以一個人的kuti安居，這樣子範圍太窄小，萬一早上你要出去托缽的時候明相沒出，容易破夏。，所以，範圍大一點是好的，衹要所有人都清楚就可以了
 	21:06	shijinyan 	我的看法，
@@ -8516,9 +8496,9 @@ window.onload = function () {
 	21:13	shijinyan 	[語音訊息]
 	21:14	釋道中	「安居的範圍內還有男眾拖缽堂，只說女眾區可以嗎」
 
-	可以的，這個衹是名字的差別而已，不然你改個名字說「比丘尼生活區」，那個他們比丘的範圍跟你們並不相幹，
+	可以的，這個衹是名字的差別而已，不然你改個名字說「比丘尼生活區」，那個他們比丘的範圍跟你們並不相干，
 
-	我說過了，比丘跟比丘尼的大界是互不幹涉的，不會障礙到比丘尼，
+	我說過了，比丘跟比丘尼的大界是互不干涉的，不會障礙到比丘尼，
 	當然是最好分開啦，但是就算重疊也並不會影響對方。
 	比如比丘尼二部受大戒的時候，就是比丘比丘尼的大界互相重疊。
 
