fix table change style

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -109,7 +109,7 @@ textarea:active {
 	box-shadow: 5px -5px 20px darkorchid;
 }
 
-#tab1 {
+table {
 	/* border: 3px solid darkgoldenrod; */
 	border-collapse: collapse;
 	margin: auto;
@@ -281,18 +281,15 @@ function changeColor(col, bg) {
 	div1.style.color = col
 	div1.style.background = bg
 	change.innerHTML += 'body {color:' + col + ';background:' + bg + ';}'
-	tab1.style.color = col
-	tab1.style.background = bg
+	change.innerHTML += 'table {color:' + col + ';background:' + bg + ';}'
 }
 function changeSize(sz) {
 	div1.style.fontSize = sz
-	change.innerHTML += '.ru {font-size:' + sz + ';}'
-	tab1.style.fontSize = sz
+	change.innerHTML += 'table {font-size:' + sz + ';}'
 }
 function changeFamily(ff) {
 	div1.style.fontFamily = ff
-	change.innerHTML += '.ru {font-family:' + ff + ';}'
-	tab1.style.fontFamily = ff
+	change.innerHTML += 'table {font-family:' + ff + ';}'
 }
 window.onload = function () {
 	btn1.onclick = function () {
