fix index D3 tree_Vertical 2Kinds && sw.js

--- a/index.html
+++ b/index.html
@@ -345,10 +345,8 @@ var ArrLi2 = ["戒學演講投影講義",
 "http://adbdao.url.tw/accelon2017/vinaya8/資持記.htm",
 "隨機羯磨.htm",
 "http://adbdao.url.tw/accelon2017/vinaya8/隨機羯磨.htm",
-"部派分裂圖 圓形圖.html",
-"https://adbdao.github.io/mycoding/D3 tree_Vertical only.html",
-"部派分裂圖 方形圖.html",
-"https://adbdao.github.io/mycoding/D3 tree_Vertical Box.html",
+"部派分裂圖(樹狀圖).html",
+"https://adbdao.github.io/mycoding/D3 tree_Vertical 2Kinds.html",
 "歷代漢文大藏經概述(樹狀圖).html",
 "https://adbdao.github.io/mycoding/D3 tree_Vertical Tipitaka_History.html",
 "歷代漢文大藏經概述(樹形圖).html",
